[SNAPSHOT]
- BREAKING: Parrot.playMusic now returns MusicInstance instead of Music. MusicInstance exposes the Music object along with some additional data.
- Added a priority parameter to ParrotSoundType and SoundInstance, which changes the order of sounds killed while limiting voices.
- Fixed "volumeFactor" never being reset on SoundInstance's reset method.
- Added "NonRandomShuffle" algorithm for picking different sounds every time, and avoiding the same sound files from repeating themselves. Thanks @BambooBandit!

[0.0.3]
- BREAKING: Added a new parameter "volumeFactor" to some "playSound" methods of SoundPlayer and Parrot to allow for easy volume manipulation on play.
    - If you extended SoundPlayer or Parrot, you will have to adapt the methods being overridden.
- BREAKING: Fixed typo "soundSontinuousFadeIn" in ParrotSettings. The field is now called "soundContinuousFadeIn".
    - If you used to access this field directly, you will need to fix the typo in your project as well.
- Added SoundInstance.getSound(), which returns the underlying libGDX Sound instance being used.
- Added MusicInstance.getMusic(), which returns the underlying libGDX Music instance being used.
- Added "volumeVariation" to ParrotSoundType, which automatically applies a random volume variation when played.